--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -8,25 +8,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        goos: [linux, windows, darwin]
+        goarch: ["amd64"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.19
-      - name: Build
-        run: |
-          mkdir -p bin
-          GOOS=linux GOARCH=amd64 go build -o bin/cloutility-api-client-linux-amd64 .
-          GOOS=darwin GOARCH=amd64 go build -o bin/cloutility-api-client-darwin-amd64 .
-          GOOS=windows GOARCH=amd64 go build -o bin/cloutility-api-client-windows-amd64.exe .
       - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        uses: wangyoucao577/go-release-action@v1
         with:
-          files: |
-            bin/cloutility-api-client-linux-amd64
-            bin/cloutility-api-client-darwin-amd64
-            bin/cloutility-api-client-windows-amd64.exe
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          binary_name: "cloutility-api-client"
