--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -4,8 +4,9 @@ on:
     tags:
       - 'v*'
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  release:
+    name: Release cloutility-api-client
+    runs-on: ubuntu-latest 
     strategy:
       matrix:
         goos: [linux, windows, darwin]
